# pka-interdisciplinary-base

./: README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: settings.py
frontend/: README.md  package-lock.json  package.json
